# coords-to-place-pipeline

./: .gitignore  LICENSE  pyproject.toml
coords_to_place_pipeline/: main.py
