[tool.poetry]
name = "lat-lon-pipeline"
version = "0.1.0"
description = ""
authors = ["PROENÇA, Marco <contato.marcoproenca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopy = "^2.4.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
